# flappy-bird-renderer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  flappy-bird-renderer  run.sh
src/: bird.cpp  bird.h  main.cpp  pipe.cpp  pipe.h  pipes.cpp  pipes.h  window.cpp  window.h
